optimize UTF-8